# local_proxy_rs

./: .gitignore  Cargo.toml  README.md  config.json.example  config_example.json5
local_proxy/: Cargo.toml
local_proxy/src/: config.rs  main.rs
local_proxy/src/inbound/: dns.rs  mod.rs  tproxy.rs
local_proxy/src/inbound/http/: connect.rs  http_proxy.rs  mod.rs
local_proxy/src/inbound/tproxy/: mod.rs
local_proxy/src/outbound/: http.rs  mod.rs  raw.rs  socks4.rs  socks5.rs
local_proxy/src/outbound/layer/: fragment.rs  mod.rs  tls.rs
local_proxy/src/utils/: addr.rs  dns.rs  http.rs  mod.rs  uri_parse.rs
src/: config.rs  connect.rs  http_proxy.rs  main.rs
src/outbound/: http.rs  mod.rs  raw.rs  socks4.rs  socks5.rs
src/outbound/layer/: mod.rs  tls.rs
src/utils/: addr.rs  dns_resolve.rs  mod.rs  unsplit.rs  uri_parse.rs
static/: error.html
tproxy_tokio/: Cargo.toml
tproxy_tokio/src/: lib.rs
tproxy_tokio/src/tcp/: mod.rs  other.rs
tproxy_tokio/src/tcp/bsd/: mod.rs  pf.rs
tproxy_tokio/src/tcp/linux/: bind.rs  destination.rs  mod.rs
