[package]
name = "local_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
once_cell = "1"
base64 = "0.21"
async-trait = "0.1"
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
rustls-pemfile = "1"
