[package]
name = "local_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
once_cell = "1"
base64 = "0.21"
async-trait = "0.1"
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dns-message-parser = "0.7"
futures-util = "0.3"
bytes = "1"
