[package]
name = "local_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tproxy_tokio = { path = "../tproxy_tokio" }
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
once_cell = "1"
base64 = "0.21"
async-trait = "0.1"
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
dns-parser = "0.8"
futures-util = "0.3"
bytes = "1"
percent-encoding = "2"
ttl_cache = "0.5"
dyn-clone = "1"
