[package]
name = "tproxy_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
socket2 = "0.5"
once_cell = "1"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
nix = { version = "0.27", features = ["ioctl"] }
