[package]
name = "tproxy_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
once_cell = "1"

# Just for the ioctl call macro
[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
nix = { version = "0.29", features = ["ioctl"] }
